--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -22,4 +22,4 @@ fi
 
 echo "Executing 'python $OPENSHIFT_REPO_DIR/wsgi/openshift/manage.py collectstatic --noinput'"
 python $OPENSHIFT_REPO_DIR/wsgi/src/manage.py collectstatic --noinput
-pip install -E $OPENSHIFT_APP_DIR/libs -e git://github.com/kmmbvnr/django-jenkins.git#egg=django-jenkins
+pip install -E $OPENSHIFT_APP_DIR/virtenv/lib -e git://github.com/kmmbvnr/django-jenkins.git#egg=django-jenkins
